# opengg

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  EXTENSION_MANIFEST_SCHEMA.md  LICENSE  Makefile  OpenGG_AudioFX_Prompt.md  README.md  SECURITY.md  build-appimage.sh  dev.sh  opengg-launch.sh  opengg.desktop.template  package-lock.json  reset-clip-data.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  extension_api_rfc.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  distro-matrix.yml  release.yml  security.yml
daemon/: Cargo.toml  deny.toml
daemon/scripts/: setup.sh
daemon/scripts/wireplumber/: opengg-eq.lua
daemon/src/: main.rs  subprocess.rs
daemon/src/audio/: effects.rs  hub.rs  mod.rs  routing.rs  sinks.rs
daemon/src/config/: mod.rs
daemon/src/device/: dbus.rs  headset.rs  mod.rs  openrgb.rs  process_watch.rs  profiles.rs  ratbag.rs  types.rs
daemon/src/extensions/: mod.rs
daemon/src/ipc/: audio_iface.rs  extensions_iface.rs  mod.rs
daemon/src/platform/: linux.rs  mod.rs  stub.rs
daemon/src/replay/: clips.rs  dbus.rs  hotkey.rs  mod.rs  recorder.rs
docs/: ARCHITECTURE.md  DESIGN_TOKENS.md  EXTENSION_DEV.md  TRANSLATING.md
extension-template/: AGENTS.md  PROMPT.md  README.md  manifest.json  manifest.schema.json  package-lock.json  package.json  vite.config.js
extension-template/locales/: ar.json  en.json
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
frontend/src-tauri/.cargo/: audit.toml
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: commands.rs  extract_audio.py  main.rs  media_server.rs  subprocess.rs  vu_native.rs
frontend/src-tauri/src/commands/: audio.rs
packaging/: create-extension.sh  opengg.desktop  openggd.service  org.opengg.Daemon.service  org.opengg.setup.policy
registry/: README.md  index.json  index.schema.json
scripts/: bump-version.sh  fetch_device_assets.sh  new-extension.sh  sync-aur.sh  validate-extension.sh
(+111 files in other folders)
