[package]
name = "opengg"
version = "1.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zbus = { version = "4", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
dirs = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
warp = "0.3"
percent-encoding = "2"
