[package]
name = "opengg"
version = "1.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = { version = "2", default-features = false, features = ["xdg-portal"] }
open = "5"
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zbus = { version = "4", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
dirs = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
warp = "0.3"
percent-encoding = "2"
libpulse-binding = "2"
libpulse-simple-binding = "2"
log = "0.4"
simplelog = "0.12"
notify = "6"
libc = "0.2"
urlencoding = "2"
walkdir = "2"
